[gd_scene load_steps=8 format=2]

[ext_resource path="res://Blightspitter.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightspitter/blightspitter_hurt.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightspitter/blightspitter_0.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightspitter/blightspitter_2.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightspitter/blightspitter_1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 72.0

[node name="Blightspitter" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.500001 )
scale = Vector2( 1, 1.04545 )
frames = SubResource( 1 )
animation = "attack"
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -13, 2 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.25

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -72, 0 )
shape = SubResource( 2 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.25

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12, 12, 12, 12, 5, -5, -5, -5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
